git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 node_modules
-*.js
 :/Users/Arvinth/Documents/GitHub/Tutorial-MERN/passport js/config/keys.js
+server/config/key.js
+
+server/config
